cmake_minimum_required(VERSION 3.16)
project(Chapter21)

set(CMAKE_CXX_STANDARD 17)

add_executable(Chapter21 main.cpp)
add_executable(Chapter21_Try01 Chapter21_Try01.cc)
add_executable(Chapter21_Try02 Chapter21_Try02.cc)
add_executable(Chapter21_Try03 Chapter21_Try03.cc)
add_executable(Chapter21_Try04 Chapter21_Try04.cc)

add_executable(Chapter21_Drill_Vector Chapter21_Drill_Vector.cc)
add_executable(Chapter21_Drill_Map Chapter21_Drill_Map.cc)
add_executable(Chapter21_Drill_Vector2 Chapter21_Drill_Vector2.cc)

add_executable(Chapter21_03 Chapter21_03.cc)
add_executable(Chapter21_04 Chapter21_04.cc)
add_executable(Chapter21_05 Chapter21_05.cc)
add_executable(Chapter21_06 Chapter21_06.cc)
add_executable(Chapter21_07 Chapter21_07.cc)
add_executable(Chapter21_08 Chapter21_08.cc)
add_executable(Chapter21_09 Chapter21_09.cc)
add_executable(Chapter21_10 Chapter21_10.cc)